fix fieldGroup button and input to align

--- a/assets/css/elements/_forms.styl
+++ b/assets/css/elements/_forms.styl
@@ -63,6 +63,14 @@ input {
   font-family: inherit;
 }
 
+/*
+ * 1. Buttons and inputs should have the same padding so that they can line up
+ *    next to one another.
+ * 2. Inputs do not strictly adhere to line-height and font-size to determine
+ *    the height of the element and adds about 1.23px top/bottom to the height.
+ *    We can compensate for this by setting the line-height to normal for both
+ *    the button and the input.
+ */
 textarea,
 input[type=text],
 input[type="password"],
@@ -86,10 +94,10 @@ input[type="color"] {
   color: $color-grey-body;
   font-family: inherit;
   font-size: pxToRem($font-size-medium);
-  height: pxToRem(30px);  // needed to override Bootstrap
-  line-height: $line-height-medium;
+  height: inherit;  // needed to override Bootstrap fixed height
+  line-height: normal; /* [2] */
   margin-bottom: 0;
-  padding: pxToRem(4px 10px);
+  padding: pxToRem(6px 10px); /* [1] */
   transition: border linear 0.2s;
   width: 100%;
 
